fix partial visibility of hover background in non-hover states on .btn class

--- a/themes/gfsc/assets/sass/components/_buttons.sass
+++ b/themes/gfsc/assets/sass/components/_buttons.sass
@@ -5,14 +5,14 @@ a.btn, .btn a
   padding: 0.66666rem 1rem
   color: $primary
   +balboa
-  background-size: 200% 100%
+  background-size: 210% 100%
   background-image: linear-gradient(to right, transparent 50%, $primary 50%)
   -webkit-transition: 0.2s
   -moz-transition: 0.2s
   transition: 0.2s
   &:hover
     color: $secondary
-    background-position: -100% 0
+    background-position: -95% 0
   &--up
     background-size: 100% 200%
     background-image: linear-gradient(to top,  $primary 50%, transparent 50%)
